fix overflow width on mobile

--- a/styles/_styles.scss
+++ b/styles/_styles.scss
@@ -36,7 +36,10 @@ img{
   height: auto;
 }
 
-a{
+a {
+  @include word-wrap;
+}
+:not(pre)>code {
   @include word-wrap;
 }
 
